2013-02-28 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m (deepCopyObjects)
	Return an autoreleased array.
	
2013-02-28 Riccardo Mottola <rm@gnu.org>

	* GRTextEditorView.m
	Fix warnings.

2013-02-25 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m
	When selecting with shift, unselect an already selected object.

2013-02-24 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m
	NSUInteger, CGFloat transitions, cleanup

2013-02-24 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GRTextEditorView.m
	* shutup clang warning

2013-02-23 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m (startCircleAtPoint, startBoxAtPoint)
	Remove code for new/old editor, since it is useless for these shapes.

2013-02-23 Riccardo Mottola <rm@gnu.org>

	* GRCircleEditor.m
	* GRBoxEditor.m
	Remove unused method moveControlAtPoint :toPoint

2013-02-22 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m (startCircleAtPoint)
	Call moveControlPointOfEditor directly instead of duplicating code.

2013-02-22 Riccardo Mottola <rm@gnu.org>

	* GRCircle.[h,m]
	Add position accessor

	* GRCircleEditor.m
	Add square constrainer

2013-02-22 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m (startBoxAtPoint)
	Call moveControlPointOfEditor directly instead of duplicating code.

2013-02-22 Riccardo Mottola <rm@gnu.org>

	* GRBox.[h,m] (position)
	Add position accessor

	* GRBoxEditor.m
	Add square constrainer.

2013-02-18 Riccardo Mottola <rm@gnu.org>

	* GRText.m
	* GRDrawableObject.m
	Fix warnings.

2013-02-17 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m (rectForPage)
	Match signature to NSInteger

2013-02-17 Riccardo Mottola <rm@gnu.org>

	* GRBox.m
	* GRCircle.m
	* GRDocView.h
	* GRDocView.m
	* GRDrawableObject.h
	* GRDrawableObject.m
	* GRPathObject.h
	* GRPathObject.m
	* GRPropsEditor.h
	float to CGFloat transition

2012-09-24 Riccardo Mottola <rm@gnu.org>

	* GRBox.m
	* GRCircle.m
	Generate properties from description and use the
	properties initializer.

2012-09-23 Riccardo Mottola <rm@gnu.org>
